syntax = "proto3";

package blog_post_section;

import "dto.proto";

option java_multiple_files = true;
option java_package = "com.samithiwat.post.grpc.blogsection";
option java_outer_classname = "BlogPostSection";

service BlogPostSectionService{
  rpc findOne(FindOnePostSectionRequest) returns (BlogPostSectionResponse) {}
  rpc create(CreatePostSectionRequest) returns (BlogPostSectionResponse) {}
  rpc update(UpdatePostSectionRequest) returns (BlogPostSectionResponse) {}
  rpc delete(DeletePostSectionRequest) returns (BlogPostSectionResponse) {}
}

message BlogPostSectionResponse {
  int32 StatusCode = 1;
  repeated string errors = 2;
  dto.BlogPostSection data = 3;
}

// findOne

message FindOnePostSectionRequest{
  uint32 id = 1;
}

// create

message CreatePostSectionRequest{
  uint32 postId = 1;
  uint32 order = 2;
  dto.PostContentType contentType = 3;
  string content = 4;
}

// update

message UpdatePostSectionRequest{
  uint32 id = 1;
  uint32 order = 2;
  string content = 3;
}

// delete

message DeletePostSectionRequest{
  uint32 id = 1;
}